<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/countTV"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:text="@string/initScore"
        android:textSize="14sp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_weight="4"
        android:layout_width="wrap_content"
        android:id="@+id/qTV"
        android:layout_height="wrap_content"
        android:hint="@string/app_name"
        android:padding="24dp"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_weight="4"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:hint="@string/firstQuestionHint" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:hint="@string/secondQuestionHint"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:hint="@string/thirdQuestionHint"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:hint="@string/fourthQuestionHint"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rbA"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="0"
            android:visibility="invisible" />

        <RadioButton
            android:layout_weight="0"
            android:visibility="invisible"
            android:id="@+id/rbS"
            android:layout_width="0dp"
            android:layout_height="0dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/btnNextName"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="16sp" />

</LinearLayout>